@@ -28,6 +28,7 @@
 
 2001-05-25  Michael Snyder  <msnyder@redhat.com>
 
+	* lin-lwp.c (stop_wait_callback): Discard redundant SIGINT events.
 	* remote.c (remote_write_bytes): Update 'p' packet pointer.
 
 2001-05-25  Jim Blandy  <jimb@redhat.com>
